--- a/style.css
+++ b/style.css
@@ -1,12 +1,6 @@
 body {
-  /*   display: flex; */
   background-color: #001c4c;
   margin: 0;
-
-  /*  background: url(https://s5.gifyu.com/images/practice-background774448d467a20f99.png) no-repeat center center fixed;
-    background-size: cover;
-    height: 100%;
-    overflow: hidden; */
 
 }
 
@@ -24,7 +18,16 @@ body {
   border-bottom-right-radius: 50%;
   width: 500px;
   margin-top: -271px;
-  /*    z-index: -1; */
+}
+
+#score-section-safari {
+  position: fixed;
+  height: 500px;
+  background-color: #0c3062;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  width: 500px;
+  margin-top: -504px;
 }
 
 #points {
