--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: #001c4c;
-  margin: 0;
-
+  margin: 0 auto;
+  max-width: 750px;
 }
 
 .score-section-container {
@@ -74,6 +74,7 @@ body {
   position: fixed;
   width: 100%;
   bottom: 0;
+  left:0;
 }
 
 #button-next {
